[package]
name = "dataflow-jit"
version = "0.1.0"
edition = "2021"

[features]
default = []
binary = ["clap", "tracing-subscriber"]

[[bin]]
name = "dataflow-jit"
required-features = ["binary"]

[dependencies]
csv = "1.2.2"
libm = "0.2.6"
paste = "1.0.9"
anyhow = "1.0.57"
lexical = "6.1.1"
size-of = "0.1.4"
tracing = "0.1.37"
cranelift = "0.96.2"
enum_dispatch = "0.3.8"
cranelift-jit = "0.96.2"
target-lexicon = "0.12.5"
cranelift-module = "0.96.2"
unicode-normalization = "0.1.22"
dbsp = { path = "../dbsp", features = ["serde", "decimal_maths"] }
bitvec = { version = "1.0.1", features = ["serde"] }
bitflags = { version = "2.0.1", features = ["serde"] }
xxhash-rust = { version = "0.8.6", features = ["xxh3"] }
cranelift-codegen = { version = "0.96.2", features = ["unwind"] }
petgraph = { version = "0.6.2", features = ["graphmap", "serde-1"] }
bincode = { version = "2.0.0-rc.2", features = ["serde"] }

# TODO: Make this optional
pretty = { version = "0.12.1", features = ["termcolor"] }

# JSON schema validation
# TODO: Feature-gate schema support
jsonschema = "0.17.0"
schemars = { version = "0.8.12", features = ["chrono"] }

# FIXME: Better serialization protocol
# TODO: Feature gate serde/json support
serde_with = "3.0.0"
serde_json = "1.0.92"
serde = { version = "1.0.152", features = ["derive"] }

# Argument parsing for the binary
clap = { version = "4.1.8", features = ["derive"], optional = true }

    [dependencies.tracing-subscriber]
    version = "0.3.16"
    features = ["env-filter"]
    optional = true

    [dependencies.chrono]
    version = "0.4.23"
    default-features = false
    features = ["std", "serde"]

    [dependencies.derive_more]
    version = "0.99.17"
    default-features = false
    features = ["from", "is_variant", "unwrap", "display"]

    [dependencies.tinyvec]
    version = "1.6.0"
    features = ["std", "rustc_1_57"]

[target.'cfg(windows)'.dependencies.winapi]
version = "0.3.9"
features = ["winnt"]

[dev-dependencies]
proptest = "1.0.0"
is-terminal = "0.4.7"
num-integer = "0.1.45"
proptest-derive = "0.3.0"
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }
dbsp = { path = "../dbsp", features = ["serde", "decimal_maths", "decimal_proptest" ] }

    [dev-dependencies.chrono]
    version = "0.4.23"
    default-features = false
    features = ["std", "clock"]
