load("@crate_index//:defs.bzl", "aliases", "all_crate_deps")
load("@rules_rust//rust:defs.bzl", "rust_library", "rust_test", "rust_binary")

rust_library(
    name = "dbsp",
    srcs = glob([
        "src/**/*.rs",
    ]),
    aliases = aliases(),
    proc_macro_deps = all_crate_deps(
        proc_macro = True,
    ),
    visibility = ["//visibility:public"],
    deps = all_crate_deps(),
)

rust_test(
    name = "unit_test",
    crate = ":dbsp",
    aliases = aliases(),
    deps = all_crate_deps(
        normal_dev = True,
    ),
    proc_macro_deps = all_crate_deps(
        proc_macro_dev = True,
    ),
)

rust_binary(
    name = "tutorial1",
    srcs = ["examples/tutorial/tutorial1.rs"],
    visibility = ["//visibility:public"],
    data = ["examples/tutorial/vaccinations.csv"],
    deps = all_crate_deps() + ["@crate_index//:csv"],
)
