[package]
name = "fda"
description = "A CLI tool for interacting with Feldera"
readme = "README.md"
include = ["openapi.json", "/src", "build.rs", "COPYRIGHT", "README.md"]
edition = { workspace = true }
version = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }
license = { workspace = true }
authors = { workspace = true }
rust-version = { workspace = true }


[dependencies]
log = { workspace = true }
clap = { workspace = true, features = ["color"] }
clap_complete = { workspace = true, features = ["unstable-dynamic"] }
progenitor-client = { workspace = true }
reqwest = { workspace = true, features = ["json", "stream"] }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "io-std", "process"] }
feldera-types = { workspace = true }
feldera-rest-api = { workspace = true }
env_logger = { workspace = true }
tabled = { workspace = true, features = ["macros", "ansi"] }
json_to_table = { workspace = true }
rustyline = { workspace = true, features = ["with-file-history"] }
directories = { workspace = true }
futures-util = { workspace = true }
futures = { workspace = true }
tokio-util = { workspace = true }
tempfile = { workspace = true }
rmpv = { workspace = true, features = ["with-serde"] }
arrow = { workspace = true, features = ["ipc", "prettyprint"] }
